--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,13 @@
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/kamp"
-
+DATABASE_URL="postgresql://postgres:RIQ5-e-wN3qymauL@localhost:5432/kamp"
+KINDE_CLIENT_ID=091f3425a48e4ce39b05bd72113df7e8
+KINDE_CLIENT_SECRET=Lcnne0lp11O3Qrhk9UUBo3S7mE13G5xUXsTL0Kuc4Qc7NLDTuMS
+KINDE_ISSUER_URL=https://kamp.kinde.com
+KINDE_SITE_URL=kamp.rent
+KINDE_POST_LOGOUT_REDIRECT_URL=kamp.rent
+KINDE_POST_LOGIN_REDIRECT_URL=kamp.rent/u/dashboard
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
