--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.23.12",
+    "lucide": "^0.539.0",
     "lucide-react": "^0.534.0",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
